# CodeGraph

./: .gitattributes  .gitignore  404.html  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  explore.html  features.html  index.html  plan.md  why.html
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: audit.yml  ci.yml  code-scanning.yml  dependency-review.yml  release.yml
assets/css/: synaptic.css
assets/data/: graph-core.json  graph-full.json
assets/js/: explore.js  graph.js  site.js
crates/codegraph-cgql/src/: ast.rs  eval.rs  lib.rs  view.rs
crates/codegraph-core/: Cargo.toml
crates/codegraph-core/src/: file_type.rs  lib.rs  node.rs  raw_call.rs  validate.rs
crates/codegraph-detect/: Cargo.toml
crates/codegraph-detect/benches/: detect.rs
crates/codegraph-detect/src/: file_type.rs  lib.rs  manifest.rs  noise.rs
crates/codegraph-eval/: Cargo.toml
crates/codegraph-eval/benches/: eval.rs
crates/codegraph-eval/corpus/: manifest.toml
crates/codegraph-eval/corpus/cross-lang-ts-rust/: ground_truth.toml
crates/codegraph-eval/corpus/cross-lang-ts-rust/src/: routes.rs
crates/codegraph-eval/corpus/cross-lang-ts-rust/web/src/: api.ts
crates/codegraph-eval/corpus/systems-rust/: ground_truth.toml
crates/codegraph-eval/src/: calibrate.rs  corpus.rs  cross_language.rs  groundtruth.rs  ledger.rs  lib.rs  replay.rs  scale.rs
crates/codegraph-extract/: Cargo.toml  build.rs
crates/codegraph-extract/benches/: extract.rs
crates/codegraph-extract/src/: apex.rs  asp.rs  bash.rs  c.rs  cache.rs  common.rs  config.rs  cpp.rs  crosslang.rs  csharp.rs  dart.rs  dotnet.rs  ecmascript.rs  elixir.rs  fortran.rs  go.rs  groovy.rs  hcl.rs  java.rs  json.rs  julia.rs  kotlin.rs  lib.rs  lua.rs  markdown.rs  objc.rs  pascal.rs  paths.rs  php.rs  powershell.rs  python.rs  razor.rs  resolve.rs  result.rs  ruby.rs  rust.rs  scala.rs  signature.rs  sql.rs  sql_semantic.rs  (+7 more)
crates/codegraph-extract/tests/: crosslang.rs  enrichment.rs  sql_foundation.rs  sql_no_columns.rs
crates/codegraph-graph/: Cargo.toml
crates/codegraph-graph/src/: analyze.rs  betweenness.rs  build.rs  community.rs  cross_language.rs  dedup.rs  lib.rs  symbol_resolution.rs
crates/codegraph-history/src/: report.rs
crates/codegraph-incremental/: Cargo.toml
crates/codegraph-incremental/benches/: incremental.rs
crates/codegraph-incremental/src/: hooks.rs  lib.rs  merge_driver.rs  watch.rs
crates/codegraph-llm/src/: lib.rs  prompts.rs
crates/codegraph-output/src/: common.rs  force3d.rs  graphml.rs  lib.rs  obsidian.rs  push.rs  svg.rs
crates/codegraph-predict/: Cargo.toml
crates/codegraph-predict/benches/: predict.rs
crates/codegraph-predict/src/: edit.rs  editforecast.rs  forecast.rs  lib.rs  render.rs
crates/codegraph-query/src/: describe.rs  lib.rs
crates/codegraph-refactor/src/: emit.rs  plan.rs  sites.rs
crates/codegraph-refactor/tests/: rename_plan.rs
crates/codegraph-report/: Cargo.toml
crates/codegraph-report/src/: lib.rs
crates/codegraph-sandbox/: Cargo.toml
crates/codegraph-sandbox/benches/: speculate.rs
crates/codegraph-sandbox/src/: lib.rs  speculate.rs  worktree.rs
crates/codegraph-semantic/: Cargo.toml
crates/codegraph-semantic/src/: convert.rs  label.rs  lib.rs  pass.rs  tiebreak.rs
crates/codegraph-server/: Cargo.toml
crates/codegraph-server/benches/: server.rs
crates/codegraph-server/examples/: tokcount.rs
crates/codegraph-server/src/: http.rs  lib.rs  prompts.rs
crates/codegraph-skillgen/: Cargo.toml
crates/codegraph-skillgen/expected/: always-on.md  skill-agents.md  skill-claude.md  skill-codex.md  skill-copilot.md  skill-cursor.md  skill-gemini.md  skill-kilo.md
crates/codegraph-skillgen/src/: codex_config.rs  lib.rs  settings_hooks.rs
crates/codegraph-sqlaudit/: Cargo.toml
crates/codegraph-sqlaudit/src/: advise.rs  findings.rs  graphview.rs  lib.rs
crates/codegraph-sqlaudit/tests/: audit_end_to_end.rs  plan_augment.rs
crates/codegraph-workspace/: Cargo.toml
crates/codegraph-workspace/benches/: discovery.rs  sibling_scan.rs  workspace.rs
crates/codegraph-workspace/src/: alias.rs  discover.rs  export_surface.rs  federate.rs  global.rs  lib.rs  manifest.rs  merge_graphs.rs  repo_scope.rs  scan.rs  state.rs  workspace_build.rs
crates/codegraph-workspace/tests/: discovery.rs  federation.rs  scan.rs
crates/synaptic-core/src/: dynamic.rs  lib.rs  node.rs
crates/synaptic-detect/benches/: detect.rs
crates/synaptic-eval/benches/: eval.rs
crates/synaptic-eval/src/: calibrate.rs  cross_language.rs  groundtruth.rs  ledger.rs  replay.rs
crates/synaptic-extract/benches/: extract.rs
crates/synaptic-extract/src/: apex.rs  asp.rs  common.rs  crosslang.rs  dart.rs  dotnet.rs  dynamic.rs  lib.rs  markdown.rs  pascal.rs  resolve.rs  result.rs  rust.rs  sql.rs  sql_semantic.rs
crates/synaptic-extract/tests/: crosslang.rs  dynamic.rs
crates/synaptic-graph/benches/: graph.rs
crates/synaptic-graph/src/: analyze.rs  betweenness.rs  build.rs  cross_language.rs  dedup.rs  dynamic_link.rs  graph.rs  lib.rs  symbol_resolution.rs
crates/synaptic-history/benches/: history.rs
crates/synaptic-history/src/: report.rs
crates/synaptic-incremental/benches/: incremental.rs
crates/synaptic-incremental/src/: lib.rs  merge_driver.rs
crates/synaptic-ingest/src/: lib.rs  mcp.rs  pg.rs  scip.rs
crates/synaptic-output/benches/: output.rs
crates/synaptic-output/src/: cypher.rs  force3d.rs  lib.rs  tests_support.rs  tree.rs
crates/synaptic-skillgen/: Cargo.toml
tools/: build-graph-data.mjs  build-hero-svg.mjs
wiki/: Analysis-and-Reports.md  Architecture.md  Assistant-Integration.md  CodeGraph-vs-Other-Tools.md  Commands.md  Configuration.md  Cross-Language-Edges.md  Development.md  Extraction.md  Home.md  Incremental-Updates.md  Ingestion.md  Installation.md  Languages.md  MCP-Server.md  Output-Formats.md  PR-Dashboard.md  Querying.md  Quickstart.md  SQL-Auditing.md  Semantic-Analysis.md  Synaptic-vs-Other-Tools.md  Updating.md  Visualizations.md  Workspaces-and-Federation.md  _Sidebar.md
(+83 files in other folders)
