[package]
name = "codegraph-core"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core data contract for CodeGraph: types, make_id, schema validation, errors."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
unicode-normalization = { workspace = true }
caseless = { workspace = true }
