[package]
name = "codegraph-graph"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Graph assembly for CodeGraph: build extraction into a petgraph KnowledgeGraph."

[dependencies]
codegraph-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
strsim = { workspace = true }
blake3 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
codegraph-extract = { workspace = true }

[[bench]]
name = "graph"
harness = false
