[package]
name = "codegraph-incremental"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Incremental rebuild + git integration for CodeGraph: changed-files rebuild, hooks, merge driver."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
codegraph-core = { workspace = true }
codegraph-detect = { workspace = true }
codegraph-extract = { workspace = true }
codegraph-graph = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "incremental"
harness = false
