[package]
name = "codegraph-report"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GRAPH_REPORT.md generation for CodeGraph."

[dependencies]
codegraph-core = { workspace = true }
codegraph-graph = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
