[package]
name = "codegraph-sandbox"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Speculative execution for CodeGraph: apply a proposed change in a throwaway git worktree and run the at-risk tests + a build/type-check to report ground-truth pass/fail."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
codegraph-history = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "speculate"
harness = false
