[package]
name = "codegraph-workspace"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Multi-repo / monorepo federation for CodeGraph: workspace discovery, per-member subgraphs, cross-repo symbol resolution, and a global graph store."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
glob = { workspace = true }
roxmltree = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
codegraph-core = { workspace = true }
codegraph-detect = { workspace = true }
codegraph-graph = { workspace = true }
codegraph-incremental = { workspace = true }
codegraph-ingest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "workspace"
harness = false

[[bench]]
name = "discovery"
harness = false

[[bench]]
name = "sibling_scan"
harness = false
